k8s/overlays/dev/patches/dev-platform.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meilisearch
spec:
  template:
    spec:
      containers:
        - name: meilisearch
